--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,7 +19,13 @@
   </head>
 
   <body>
-
+    <% if flash[:notice] %>
+       <div class="alert alert-dismissible alert-success">
+       <div class="notice"><strong><%= flash[:notice] %></strong>
+      </div>
+       <button type="button" class="close" data-dismiss="alert">&times;</button>
+      </div>
+    <% end %>
    
 
     <main role="main">
