--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<p> Ceci est le profil de  <%= User.all[(params[:id].to_i)-1].first_name%> 
-    <!--  le -1 sert à gérer le décalage entre l'ID et l'index dans l'array  -->
+<p> Ceci est le profil de  <%= @user.first_name%> 
+
 </p>
 
 <p>  
@@ -11,10 +11,12 @@
        <div class="col-sm m-2 text center"> 
 	 <div class="card" style="width: 30rem;">
     <div class="card-body">
-    <h5 class="card-title"><%= @user.first_name + " " + @user.last_name%></h5>
+    <h5 class="card-title"><%= @user.first_name%> <%=@user.last_name%></h5>
 </br>	
-    <p class="card-text"><%= "Description : "+@user.description%></p>
+    <p class="card-text">Description : <%= @user.description%></p>
       </div>
 </div>
 </div>
+
+<p> <%= link_to("Changer de mot de passe/courriel : ",edit_user_registration_path)%></p>
     
