--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,15 +20,31 @@
        <p style="text-align: center;font-size: 1.2em;;"> Email du créateur </br>  <%= @event.admin.email %></p>
 
         
-			<% if current_user != @event.admin  %>
+      <% if current_user != @event.admin && attending_event?.include?(current_user.id) == false   %>
+       <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-warning" >  <%= link_to "Participer à cet évenement",new_event_attendance_path(@event.id)%>  </p>
+         <% end %>
 
-			<% else %>
-			<p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-warning" >  <%= link_to "Profil",user_path %>  </p>
+       <% if is_event_admin?(@event.admin) %>
+    
+      <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-danger" >  <%= link_to "Supprimer", event_path(@event.id),method: :delete %>  </p>
 
-			<p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-danger" >  <%= link_to "Supprimer", event_path(@event.id),method: :delete %>  </p>
+      <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-outline-primary"></button>  <%= link_to "Editer", edit_event_path(:id => @event.id)%></p>
 
-				
-		<% end %>
+       <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-light" >  <%= link_to "Liste des inscrits", event_attendances_path(@event.id)%></p>
+
+
+     
+        
+
+
+        
+       <% end %>
+
+
+ 
+ 
+
+
 
      
 
@@ -37,6 +53,21 @@
   </div>
 </div>
 </center>
+<% if flash[:notice] %>
+       <div class="alert alert-dismissible alert-success">
+       <div class="notice"><strong><%= flash[:notice] %></strong>
+      </div>
+       <button type="button" class="close" data-dismiss="alert">&times;</button>
+      </div>
+    <% end %>
+
+       <% if flash[:error] %>
+  <div class="alert alert-dismissible alert-danger">
+    <div class="notice"><strong><%= flash[:error] %></strong>
+     </div>
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+  </div>
+<% end %>
 
 </body>
 </html>
