--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,12 +25,18 @@
      <br/>
        <p style="text-align: center;font-size: 1.2em;;"> Email du créateur </br>  <%= @event.admin.email %></p>
 
-        
-      <% if current_user != @event.admin && attending_event?.include?(current_user.id) == false   %>
-       <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-warning" >  <%= link_to "Participer à cet évenement",new_event_attendance_path(@event.id)%>  </p>
-         <% end %>
+      <% if current_user  %>
+        <% if current_user != @event.admin && attending_event?.include?(current_user.id) == false   %>
+         <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-warning" >  <%= link_to "Participer à cet évenement",new_event_attendance_path(@event.id)%>  </p>
+        <% end %>
 
-       <% if is_event_admin?(@event.admin) %>
+     <% else %>
+      <p  style="color: white; font-size: 1em; border-radius: 20px;" class="btn btn-warning" >  <%= link_to "Connectez vous pour participer à cet évenement", new_user_session_path%>  </p>
+
+
+     <% end %>
+
+       <% if current_user && is_event_admin?(@event.admin) %>
 
 
     
@@ -44,6 +50,9 @@
         <%= form_tag  event_pictures_path(@event.id), multipart: true do %>
         <%= file_field_tag :event_picture %>
         <%= submit_tag "mettre à jour" %>
+
+        
+     
         <% end %>
 
 
