--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -26,50 +26,105 @@
        <button type="button" class="close" data-dismiss="alert">&times;</button>
       </div>
     <% end %>
-   
 
-    <main role="main">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">Thp Brite!</h1>
-          <p>Ceci est la page d'accueil du clone THP d'Eventbrite</p>
-           <% if current_user  %>
-          <p> <%= link_to " Créer un événement " "&raquo;".html_safe, new_event_path, :class => "btn btn-primary btn-lg", :role => "button"  %> </p>
-          <%  end  %>
+
+    <header>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!-- Slide One - Set the background image for this slide in the line below -->
+        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>First Slide</h3>
+            <p>This is a description for the first slide.</p>
+          </div>
+        </div>
+        <!-- Slide Two - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Second Slide</h3>
+            <p>This is a description for the second slide.</p>
+          </div>
+        </div>
+        <!-- Slide Three - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Third Slide</h3>
+            <p>This is a description for the third slide.</p>
+          </div>
         </div>
       </div>
-
-  <div class="container">
-        <!-- Example row of columns -->
-     <div class="row">
-
-
-        <% @events.each do |event| %>
-          <div class="col-sm m-2 text center"> 
-            <div class="card" style="width: 15rem">
-              <div class="card-body card-event">
-                <h2><%=event.title %></h2>
-                <p><%=event.description %> </p>
-                </br>
-                <p> Admin : <%=event.admin.first_name %>  <%=event.admin.last_name %>  
-
-                <p class="btn btn-secondary">  <%= link_to "Plus d'info", event_path(event.id) %> &raquo </p>
-              </div>
-            </div>
-         </div>
-      <%end%>
-         
-        
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-  </div> <!-- /container -->
+  </header>
 
-    </main>
 
-    <footer class="container">
-      <p>&copy; Company 2017-2018</p>
-    </footer>
+ <div class="container">
+
+    <h1 class="my-4">Bienvenue sur le clone THP d'Eventbrite</h1>
+
+  <div class="row">
+      <% @events.each do |event| %> 
+    
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+        <%if event.event_picture.attached?%> 
+       <%= image_tag event.event_picture, alt: 'event_picture',:size => "350x200" %>
+        <% else%> 
+        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt="placeholder_picture"></a>
+        <% end%> 
+          <h4 class="card-header"> <%= event.title %> </h4>
+          <div class="card-body">
+            <p class="card-text"><%= event.description %></p>
+          </div>
+          <div class="card-footer">
+            <p  <%= link_to "Plus d'info", event_path(event.id), :class =>"btn btn-secondary"  %> &raquo </p>
+          </div>
+        </div>
+      </div>
+            <%end%>
+    </div>
+    <!-- /.row -->
+  </div>
+     
+
+      <div class="row mb-4">
+      <div class="col-md-8">
+        <h4> Créez vos evenements, rejoignez ceux des autres, payez en toute sécurité !</h4>  
+        <h4>Brite : Peu importe l'état de vos dents, nous allons vous donner le sourire !</h4>
+      </div>
+       <%unless current_user%>
+      <div class="col-md-3">
+         <%= link_to "Inscrivez-vous dès maintenant !",new_user_path, :class =>"btn btn-lg btn-secondary btn-block"  %>
+      
+      </div>
+      <%end%>
+    </div>
+    </div>
+
+
+
+   
+
+    
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; MK Brite, Thp 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
