--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -90,7 +90,7 @@
             <p class="card-text"><%= event.description %></p>
           </div>
           <div class="card-footer">
-            <p  <%= link_to "Plus d'info", event_path(event.id), :class =>"btn btn-secondary"  %> &raquo </p>
+            <%= link_to "Plus d'info" " &raquo;".html_safe, event_path(event.id), :class =>"btn btn-secondary"  %>  
           </div>
         </div>
       </div>
