correction lien inscription cta

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -115,7 +115,7 @@
 
        <%else %>
       <div class="col-md-3">
-         <%= link_to "Inscrivez-vous dès maintenant !",new_user_path, :class =>"btn btn-lg btn-success btn-block"  %>
+         <%= link_to "Inscrivez-vous dès maintenant !",new_user_registration_path, :class =>"btn btn-lg btn-success btn-block"  %>
       
       </div>
       <%end%>
